[package]
name = "debug-cell"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/debug-cell"
homepage = "https://github.com/alexcrichton/debug-cell"
documentation = "https://docs.rs/debug-cell"
description = """
A clone of the standard library's `RefCell` type with extra debugging support in
non-release builds. Whenever a borrow error happens the current locations of
where known borrows were created will be printed out as well.
"""

[dependencies]
backtrace = "0.3"

[[test]]
name = "smoke"
harness = false
